JumpScript/tests/baselines/reference/decoratorsOnComputedProperties.errors.txt
tests/cases/compiler/decoratorsOnComputedProperties.jump(18,5): error TS1166: A computed property name in a class property declaration must refer to an expression whose type is a literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.jump(19,8): error TS1166: A computed property name in a class property declaration must refer to an expression whose type is a literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.jump(20,8): error TS1166: A computed property name in a class property declaration must refer to an expression whose type is a literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.jump(21,5): error TS1166: A computed property name in a class property declaration must refer to an expression whose type is a literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.jump(22,8): error TS1166: A computed property name in a class property declaration must refer to an expression whose type is a literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.jump(23,8): error TS1166: A computed property name in a class property declaration must refer to an expression whose type is a literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.jump(27,5): error TS1206: Decorators are not valid here.
tests/cases/compiler/decoratorsOnComputedProperties.jump(28,5): error TS1206: Decorators are not valid here.
tests/cases/compiler/decoratorsOnComputedProperties.jump(29,5): error TS1206: Decorators are not valid here.
tests/cases/compiler/decoratorsOnComputedProperties.jump(30,5): error TS1206: Decorators are not valid here.
tests/cases/compiler/decoratorsOnComputedProperties.jump(35,5): error TS1166: A computed property name in a class property declaration must refer to an expression whose type is a literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.jump(36,5): error TS1206: Decorators are not valid here.
tests/cases/compiler/decoratorsOnComputedProperties.jump(37,5): error TS1206: Decorators are not valid here.
tests/cases/compiler/decoratorsOnComputedProperties.jump(38,5): error TS1166: A computed property name in a class property declaration must refer to an expression whose type is a literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.jump(39,5): error TS1206: Decorators are not valid here.
tests/cases/compiler/decoratorsOnComputedProperties.jump(40,5): error TS1206: Decorators are not valid here.
tests/cases/compiler/decoratorsOnComputedProperties.jump(52,5): error TS1166: A computed property name in a class property declaration must refer to an expression whose type is a literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.jump(53,8): error TS1166: A computed property name in a class property declaration must refer to an expression whose type is a literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.jump(54,8): error TS1166: A computed property name in a class property declaration must refer to an expression whose type is a literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.jump(55,5): error TS1166: A computed property name in a class property declaration must refer to an expression whose type is a literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.jump(56,8): error TS1166: A computed property name in a class property declaration must refer to an expression whose type is a literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.jump(57,8): error TS1166: A computed property name in a class property declaration must refer to an expression whose type is a literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.jump(62,5): error TS1206: Decorators are not valid here.
tests/cases/compiler/decoratorsOnComputedProperties.jump(63,5): error TS1206: Decorators are not valid here.
tests/cases/compiler/decoratorsOnComputedProperties.jump(64,5): error TS1206: Decorators are not valid here.
tests/cases/compiler/decoratorsOnComputedProperties.jump(65,5): error TS1206: Decorators are not valid here.
tests/cases/compiler/decoratorsOnComputedProperties.jump(70,5): error TS1166: A computed property name in a class property declaration must refer to an expression whose type is a literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.jump(71,5): error TS1206: Decorators are not valid here.
tests/cases/compiler/decoratorsOnComputedProperties.jump(72,5): error TS1206: Decorators are not valid here.
tests/cases/compiler/decoratorsOnComputedProperties.jump(73,5): error TS1166: A computed property name in a class property declaration must refer to an expression whose type is a literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.jump(74,5): error TS1206: Decorators are not valid here.
tests/cases/compiler/decoratorsOnComputedProperties.jump(75,5): error TS1206: Decorators are not valid here.
tests/cases/compiler/decoratorsOnComputedProperties.jump(88,5): error TS1166: A computed property name in a class property declaration must refer to an expression whose type is a literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.jump(89,8): error TS1166: A computed property name in a class property declaration must refer to an expression whose type is a literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.jump(90,8): error TS1166: A computed property name in a class property declaration must refer to an expression whose type is a literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.jump(92,5): error TS1166: A computed property name in a class property declaration must refer to an expression whose type is a literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.jump(93,8): error TS1166: A computed property name in a class property declaration must refer to an expression whose type is a literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.jump(94,8): error TS1166: A computed property name in a class property declaration must refer to an expression whose type is a literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.jump(98,5): error TS1206: Decorators are not valid here.
tests/cases/compiler/decoratorsOnComputedProperties.jump(99,5): error TS1206: Decorators are not valid here.
tests/cases/compiler/decoratorsOnComputedProperties.jump(100,5): error TS1206: Decorators are not valid here.
tests/cases/compiler/decoratorsOnComputedProperties.jump(101,5): error TS1206: Decorators are not valid here.
tests/cases/compiler/decoratorsOnComputedProperties.jump(106,5): error TS1166: A computed property name in a class property declaration must refer to an expression whose type is a literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.jump(107,5): error TS1206: Decorators are not valid here.
tests/cases/compiler/decoratorsOnComputedProperties.jump(108,5): error TS1206: Decorators are not valid here.
tests/cases/compiler/decoratorsOnComputedProperties.jump(110,5): error TS1166: A computed property name in a class property declaration must refer to an expression whose type is a literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.jump(111,5): error TS1206: Decorators are not valid here.
tests/cases/compiler/decoratorsOnComputedProperties.jump(112,5): error TS1206: Decorators are not valid here.
tests/cases/compiler/decoratorsOnComputedProperties.jump(124,5): error TS1166: A computed property name in a class property declaration must refer to an expression whose type is a literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.jump(125,8): error TS1166: A computed property name in a class property declaration must refer to an expression whose type is a literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.jump(126,8): error TS1166: A computed property name in a class property declaration must refer to an expression whose type is a literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.jump(128,5): error TS1166: A computed property name in a class property declaration must refer to an expression whose type is a literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.jump(129,8): error TS1166: A computed property name in a class property declaration must refer to an expression whose type is a literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.jump(131,8): error TS1166: A computed property name in a class property declaration must refer to an expression whose type is a literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.jump(135,5): error TS1206: Decorators are not valid here.
tests/cases/compiler/decoratorsOnComputedProperties.jump(136,5): error TS1206: Decorators are not valid here.
tests/cases/compiler/decoratorsOnComputedProperties.jump(137,5): error TS1206: Decorators are not valid here.
tests/cases/compiler/decoratorsOnComputedProperties.jump(138,5): error TS1206: Decorators are not valid here.
tests/cases/compiler/decoratorsOnComputedProperties.jump(143,5): error TS1166: A computed property name in a class property declaration must refer to an expression whose type is a literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.jump(144,5): error TS1206: Decorators are not valid here.
tests/cases/compiler/decoratorsOnComputedProperties.jump(145,5): error TS1206: Decorators are not valid here.
tests/cases/compiler/decoratorsOnComputedProperties.jump(147,5): error TS1166: A computed property name in a class property declaration must refer to an expression whose type is a literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.jump(148,5): error TS1206: Decorators are not valid here.
tests/cases/compiler/decoratorsOnComputedProperties.jump(150,5): error TS1206: Decorators are not valid here.
tests/cases/compiler/decoratorsOnComputedProperties.jump(162,5): error TS1166: A computed property name in a class property declaration must refer to an expression whose type is a literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.jump(163,8): error TS1166: A computed property name in a class property declaration must refer to an expression whose type is a literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.jump(164,8): error TS1166: A computed property name in a class property declaration must refer to an expression whose type is a literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.jump(166,5): error TS1166: A computed property name in a class property declaration must refer to an expression whose type is a literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.jump(167,8): error TS1166: A computed property name in a class property declaration must refer to an expression whose type is a literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.jump(169,8): error TS1166: A computed property name in a class property declaration must refer to an expression whose type is a literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.jump(173,5): error TS1206: Decorators are not valid here.
tests/cases/compiler/decoratorsOnComputedProperties.jump(174,5): error TS1206: Decorators are not valid here.
tests/cases/compiler/decoratorsOnComputedProperties.jump(175,5): error TS1206: Decorators are not valid here.
tests/cases/compiler/decoratorsOnComputedProperties.jump(176,5): error TS1206: Decorators are not valid here.
tests/cases/compiler/decoratorsOnComputedProperties.jump(181,5): error TS1166: A computed property name in a class property declaration must refer to an expression whose type is a literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.jump(182,5): error TS1206: Decorators are not valid here.
tests/cases/compiler/decoratorsOnComputedProperties.jump(183,5): error TS1206: Decorators are not valid here.
tests/cases/compiler/decoratorsOnComputedProperties.jump(184,5): error TS1206: Decorators are not valid here.
tests/cases/compiler/decoratorsOnComputedProperties.jump(185,5): error TS1166: A computed property name in a class property declaration must refer to an expression whose type is a literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.jump(186,5): error TS1206: Decorators are not valid here.
tests/cases/compiler/decoratorsOnComputedProperties.jump(188,5): error TS1206: Decorators are not valid here.


==== tests/cases/compiler/decoratorsOnComputedProperties.jump (81 errors) ====
    function x(o: object, k: PropertyKey) { }
    let i = 0;
    function foo(): string { return ++i + ""; }
    
    const fieldNameA: string = "fieldName1";
    const fieldNameB: string = "fieldName2";
    const fieldNameC: string = "fieldName3";
    
    class A {
        @x ["property"]: any;
        @x [Symbol.toStringTag]: any;
        @x ["property2"]: any = 2;
        @x [Symbol.iterator]: any = null;
        ["property3"]: any;
        [Symbol.isConcatSpreadable]: any;
        ["property4"]: any = 2;
        [Symbol.match]: any = null;
        [foo()]: any;
        ~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must refer to an expression whose type is a literal type or a 'unique symbol' type.
        @x [foo()]: any;
           ~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must refer to an expression whose type is a literal type or a 'unique symbol' type.
        @x [foo()]: any = null;
           ~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must refer to an expression whose type is a literal type or a 'unique symbol' type.
        [fieldNameA]: any;
        ~~~~~~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must refer to an expression whose type is a literal type or a 'unique symbol' type.
        @x [fieldNameB]: any;
           ~~~~~~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must refer to an expression whose type is a literal type or a 'unique symbol' type.
        @x [fieldNameC]: any = null;
           ~~~~~~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must refer to an expression whose type is a literal type or a 'unique symbol' type.
    }
    
    void class B {
        @x ["property"]: any;
        ~
!!! error TS1206: Decorators are not valid here.
        @x [Symbol.toStringTag]: any;
        ~
!!! error TS1206: Decorators are not valid here.
        @x ["property2"]: any = 2;
        ~
!!! error TS1206: Decorators are not valid here.
        @x [Symbol.iterator]: any = null;
        ~
!!! error TS1206: Decorators are not valid here.
        ["property3"]: any;
        [Symbol.isConcatSpreadable]: any;
        ["property4"]: any = 2;
        [Symbol.match]: any = null;
        [foo()]: any;
        ~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must refer to an expression whose type is a literal type or a 'unique symbol' type.
        @x [foo()]: any;
        ~
!!! error TS1206: Decorators are not valid here.
        @x [foo()]: any = null;
        ~
!!! error TS1206: Decorators are not valid here.
        [fieldNameA]: any;
        ~~~~~~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must refer to an expression whose type is a literal type or a 'unique symbol' type.
        @x [fieldNameB]: any;
        ~
!!! error TS1206: Decorators are not valid here.
        @x [fieldNameC]: any = null;
        ~
!!! error TS1206: Decorators are not valid here.
    };
    
    class C {
        @x ["property"]: any;
        @x [Symbol.toStringTag]: any;
        @x ["property2"]: any = 2;
        @x [Symbol.iterator]: any = null;
        ["property3"]: any;
        [Symbol.isConcatSpreadable]: any;
        ["property4"]: any = 2;
        [Symbol.match]: any = null;
        [foo()]: any;
        ~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must refer to an expression whose type is a literal type or a 'unique symbol' type.
        @x [foo()]: any;
           ~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must refer to an expression whose type is a literal type or a 'unique symbol' type.
        @x [foo()]: any = null;
           ~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must refer to an expression whose type is a literal type or a 'unique symbol' type.
        [fieldNameA]: any;
        ~~~~~~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must refer to an expression whose type is a literal type or a 'unique symbol' type.
        @x [fieldNameB]: any;
           ~~~~~~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must refer to an expression whose type is a literal type or a 'unique symbol' type.
        @x [fieldNameC]: any = null;
           ~~~~~~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must refer to an expression whose type is a literal type or a 'unique symbol' type.
        ["some" + "method"]() {}
    }
    
    void class D {
        @x ["property"]: any;
        ~
!!! error TS1206: Decorators are not valid here.
        @x [Symbol.toStringTag]: any;
        ~
!!! error TS1206: Decorators are not valid here.
        @x ["property2"]: any = 2;
        ~
!!! error TS1206: Decorators are not valid here.
        @x [Symbol.iterator]: any = null;
        ~
!!! error TS1206: Decorators are not valid here.
        ["property3"]: any;
        [Symbol.isConcatSpreadable]: any;
        ["property4"]: any = 2;
        [Symbol.match]: any = null;
        [foo()]: any;
        ~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must refer to an expression whose type is a literal type or a 'unique symbol' type.
        @x [foo()]: any;
        ~
!!! error TS1206: Decorators are not valid here.
        @x [foo()]: any = null;
        ~
!!! error TS1206: Decorators are not valid here.
        [fieldNameA]: any;
        ~~~~~~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must refer to an expression whose type is a literal type or a 'unique symbol' type.
        @x [fieldNameB]: any;
        ~
!!! error TS1206: Decorators are not valid here.
        @x [fieldNameC]: any = null;
        ~
!!! error TS1206: Decorators are not valid here.
        ["some" + "method"]() {}
    };
    
    class E {
        @x ["property"]: any;
        @x [Symbol.toStringTag]: any;
        @x ["property2"]: any = 2;
        @x [Symbol.iterator]: any = null;
        ["property3"]: any;
        [Symbol.isConcatSpreadable]: any;
        ["property4"]: any = 2;
        [Symbol.match]: any = null;
        [foo()]: any;
        ~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must refer to an expression whose type is a literal type or a 'unique symbol' type.
        @x [foo()]: any;
           ~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must refer to an expression whose type is a literal type or a 'unique symbol' type.
        @x [foo()]: any = null;
           ~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must refer to an expression whose type is a literal type or a 'unique symbol' type.
        ["some" + "method"]() {}
        [fieldNameA]: any;
        ~~~~~~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must refer to an expression whose type is a literal type or a 'unique symbol' type.
        @x [fieldNameB]: any;
           ~~~~~~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must refer to an expression whose type is a literal type or a 'unique symbol' type.
        @x [fieldNameC]: any = null;
           ~~~~~~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must refer to an expression whose type is a literal type or a 'unique symbol' type.
    }
    
    void class F {
        @x ["property"]: any;
        ~
!!! error TS1206: Decorators are not valid here.
        @x [Symbol.toStringTag]: any;
        ~
!!! error TS1206: Decorators are not valid here.
        @x ["property2"]: any = 2;
        ~
!!! error TS1206: Decorators are not valid here.
        @x [Symbol.iterator]: any = null;
        ~
!!! error TS1206: Decorators are not valid here.
        ["property3"]: any;
        [Symbol.isConcatSpreadable]: any;
        ["property4"]: any = 2;
        [Symbol.match]: any = null;
        [foo()]: any;
        ~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must refer to an expression whose type is a literal type or a 'unique symbol' type.
        @x [foo()]: any;
        ~
!!! error TS1206: Decorators are not valid here.
        @x [foo()]: any = null;
        ~
!!! error TS1206: Decorators are not valid here.
        ["some" + "method"]() {}
        [fieldNameA]: any;
        ~~~~~~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must refer to an expression whose type is a literal type or a 'unique symbol' type.
        @x [fieldNameB]: any;
        ~
!!! error TS1206: Decorators are not valid here.
        @x [fieldNameC]: any = null;
        ~
!!! error TS1206: Decorators are not valid here.
    };
    
    class G {
        @x ["property"]: any;
        @x [Symbol.toStringTag]: any;
        @x ["property2"]: any = 2;
        @x [Symbol.iterator]: any = null;
        ["property3"]: any;
        [Symbol.isConcatSpreadable]: any;
        ["property4"]: any = 2;
        [Symbol.match]: any = null;
        [foo()]: any;
        ~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must refer to an expression whose type is a literal type or a 'unique symbol' type.
        @x [foo()]: any;
           ~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must refer to an expression whose type is a literal type or a 'unique symbol' type.
        @x [foo()]: any = null;
           ~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must refer to an expression whose type is a literal type or a 'unique symbol' type.
        ["some" + "method"]() {}
        [fieldNameA]: any;
        ~~~~~~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must refer to an expression whose type is a literal type or a 'unique symbol' type.
        @x [fieldNameB]: any;
           ~~~~~~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must refer to an expression whose type is a literal type or a 'unique symbol' type.
        ["some" + "method2"]() {}
        @x [fieldNameC]: any = null;
           ~~~~~~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must refer to an expression whose type is a literal type or a 'unique symbol' type.
    }
    
    void class H {
        @x ["property"]: any;
        ~
!!! error TS1206: Decorators are not valid here.
        @x [Symbol.toStringTag]: any;
        ~
!!! error TS1206: Decorators are not valid here.
        @x ["property2"]: any = 2;
        ~
!!! error TS1206: Decorators are not valid here.
        @x [Symbol.iterator]: any = null;
        ~
!!! error TS1206: Decorators are not valid here.
        ["property3"]: any;
        [Symbol.isConcatSpreadable]: any;
        ["property4"]: any = 2;
        [Symbol.match]: any = null;
        [foo()]: any;
        ~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must refer to an expression whose type is a literal type or a 'unique symbol' type.
        @x [foo()]: any;
        ~
!!! error TS1206: Decorators are not valid here.
        @x [foo()]: any = null;
        ~
!!! error TS1206: Decorators are not valid here.
        ["some" + "method"]() {}
        [fieldNameA]: any;
        ~~~~~~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must refer to an expression whose type is a literal type or a 'unique symbol' type.
        @x [fieldNameB]: any;
        ~
!!! error TS1206: Decorators are not valid here.
        ["some" + "method2"]() {}
        @x [fieldNameC]: any = null;
        ~
!!! error TS1206: Decorators are not valid here.
    };
    
    class I {
        @x ["property"]: any;
        @x [Symbol.toStringTag]: any;
        @x ["property2"]: any = 2;
        @x [Symbol.iterator]: any = null;
        ["property3"]: any;
        [Symbol.isConcatSpreadable]: any;
        ["property4"]: any = 2;
        [Symbol.match]: any = null;
        [foo()]: any;
        ~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must refer to an expression whose type is a literal type or a 'unique symbol' type.
        @x [foo()]: any;
           ~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must refer to an expression whose type is a literal type or a 'unique symbol' type.
        @x [foo()]: any = null;
           ~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must refer to an expression whose type is a literal type or a 'unique symbol' type.
        @x ["some" + "method"]() {}
        [fieldNameA]: any;
        ~~~~~~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must refer to an expression whose type is a literal type or a 'unique symbol' type.
        @x [fieldNameB]: any;
           ~~~~~~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must refer to an expression whose type is a literal type or a 'unique symbol' type.
        ["some" + "method2"]() {}
        @x [fieldNameC]: any = null;
           ~~~~~~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must refer to an expression whose type is a literal type or a 'unique symbol' type.
    }
    
    void class J {
        @x ["property"]: any;
        ~
!!! error TS1206: Decorators are not valid here.
        @x [Symbol.toStringTag]: any;
        ~
!!! error TS1206: Decorators are not valid here.
        @x ["property2"]: any = 2;
        ~
!!! error TS1206: Decorators are not valid here.
        @x [Symbol.iterator]: any = null;
        ~
!!! error TS1206: Decorators are not valid here.
        ["property3"]: any;
        [Symbol.isConcatSpreadable]: any;
        ["property4"]: any = 2;
        [Symbol.match]: any = null;
        [foo()]: any;
        ~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must refer to an expression whose type is a literal type or a 'unique symbol' type.
        @x [foo()]: any;
        ~
!!! error TS1206: Decorators are not valid here.
        @x [foo()]: any = null;
        ~
!!! error TS1206: Decorators are not valid here.
        @x ["some" + "method"]() {}
        ~
!!! error TS1206: Decorators are not valid here.
        [fieldNameA]: any;
        ~~~~~~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must refer to an expression whose type is a literal type or a 'unique symbol' type.
        @x [fieldNameB]: any;
        ~
!!! error TS1206: Decorators are not valid here.
        ["some" + "method2"]() {}
        @x [fieldNameC]: any = null;
        ~
!!! error TS1206: Decorators are not valid here.
    };